tests/snapshots/conformance__n_object_emoji.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{🇨🇭}
stdout --- 
<empty>
stderr --- 
error: unexpected character `🇨`. expected start of a json value
 --> stdin:1:2
  |
1 | {🇨🇭}
  |  ^
