tests/snapshots/conformance__n_object_garbage_at_end.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{"a":"a" 123}
stdout --- 
<empty>
stderr --- 
error: expected comma or closed curly brace, found `123`
 --> stdin:1:10
  |
1 | {"a":"a" 123}
  | -   ---- ^^^
  | |   |
  | |   expected due to the preceding key/value pair
  | object opened here by `{`
