tests/snapshots/conformance__n_object_key_with_single_quotes.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{key: 'value'}
stdout --- 
<empty>
stderr --- 
error: unexpected character `k`. expected start of a json value
 --> stdin:1:2
  |
1 | {key: 'value'}
  |  ^
