tests/snapshots/conformance__n_object_lone_continuation_byte_in_key_and_trailing_comma.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
<raw bytes>
[123, 34, 185, 34, 58, 34, 48, 34, 44, 125]
stdout --- 
<empty>
stderr --- 
error: source did not contain valid utf8
 --> stdin
  |
