tests/snapshots/conformance__n_object_missing_colon.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{"a" b}
stdout --- 
<empty>
stderr --- 
error: unexpected character `b`. expected start of a json value
 --> stdin:1:6
  |
1 | {"a" b}
  |      ^
