tests/snapshots/conformance__n_object_missing_semicolon.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{"a" "b"}
stdout --- 
<empty>
stderr --- 
error: expected colon after key, found `"b"`
 --> stdin:1:6
  |
1 | {"a" "b"}
  |  --- ^^^
  |  |
  |  expected due to `"a"`
  |
help: insert the missing colon
  |
1 | {"a":  "b"}
  |     +
